# qldpc-discovery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXTENDING.md  README.md  certify_batch_n144.py  certify_d8.py  certify_d9.py  certify_top.py  exp_bigsearch.py  exp_certbatch.py  exp_certlb.py  exp_diag.py  exp_n144.py  exp_search.py  exp_search3.py  exp_structure.py  finalize.py  probe_d10.py  pyproject.toml  render_findings.py  run_blind_search.py  run_search.py  run_search_exact.py
.claude/: inject_alignment.sh  inject_infra.sh  ralph-loop.local.md  ralph_stop_guard.sh  settings.json
.github/workflows/: ci.yml  julia-ci.yml
docs/: EXTENDING.md  architecture.md  index.md  usage.md
examples/: quickstart.py
julia/: Project.toml  README.md
julia/examples/: demo.ipynb  quickstart.jl
julia/ext/: QCodeDiscoveryCUDAExt.jl
julia/src/: QCodeDiscovery.jl  distance_exact.jl  gpu.jl  gpu_cuda.jl  pbb_distance.jl  polynomials.jl
julia/test/: bposd_regression_tests.jl  distance_alloc_regression_tests.jl  parity_tests.jl  runtests.jl
paper/qldpc-discovery/: report.md
progress/audit-vs-paper/: AUDIT.md  BROADENED_VS_PAPER.md  EVOLUTION_FINDING.md  HIGHK_VS_PAPER.md  PBB_VS_PAPER.md  SUMMARY.md
progress/blind-search-8gpu/: FRONTIER.md  RESEARCH_NOTE.md  certified.md  certified_broadened.md  certified_highk.md  certified_highk2.md  evolved_frontier.tsv  evolved_frontier_honest.tsv  evolved_frontier_long.tsv  frontier.md  frontier.md.tsv  frontier_broadened.md  frontier_broadened.md.tsv  frontier_highk.md  frontier_highk.md.tsv  frontier_highk2.md  frontier_highk2.md.tsv  frontier_pbb.md  frontier_pbb.md.tsv
progress/blind-zero-2/: AUDIT_2606_AND_FIGURE.md  BEST_CODES.md  REPORT.md  (+56 more)
python/: README.md  conftest.py  pyproject.toml
python/docs/: EXTENDING.md  REPORT.md  architecture.md  index.md  usage.md
python/examples/: quickstart.py
python/src/: cli.py
python/src/codes/: bb_codes.py  pbb_codes.py
python/src/discovery/: __init__.py  search.py
python/src/qcode_discovery/: __init__.py
python/src/qcode_discovery/algebra/: __init__.py
python/src/qcode_discovery/codes/: __init__.py
python/src/structure/: dedup.py
results/: _archive.json  _archive_n72.json  _big_lattice.json  _certified.json  _certified_n144.json  _certified_n144_batch.json  _n144_126.json  _n144_126_free.json  _n144_126_lowk.json  _n144_612.json  _n144_612_free.json  _n144_612_lowk.json  _n144_merged.json  _probe_d10.json  _probe_d9.json  _search3_66.json  blind_css_discovery.json  blind_pbb_discovery.json  blind_zero_findings.md  blind_zero_validation.md  discovery_timeline.md  validation_report.md  validation_report_css.md  validation_report_pbb.md
scripts/: code_quality_audit.py  run_blind_discovery.py  run_claude_guided_search.py  validate_against_paper.py
tests/: test_cli.py  test_discovery.py  test_kernel.py  test_n144_ladder.py  test_qcode_kernel.py  test_search_and_milp.py
(+95 files in other folders)
