[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qcode-discovery"
version = "0.1.0"
description = "Verified, catalog-blind reproduction of LLM-guided evolutionary discovery of bivariate bicycle quantum LDPC codes (arXiv:2606.02418)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "qldpc-discovery contributors" }]
keywords = ["quantum-error-correction", "qLDPC", "bivariate-bicycle", "CSS-codes", "code-discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.24", "scipy>=1.11"]

[project.optional-dependencies]
# Unlock component 7 (BP-OSD distance) and exact BLISS dedup (component 11).
decoders = ["ldpc>=2.2", "python-igraph>=0.11"]
dev = ["pytest>=7"]

[project.urls]
"Reproduced paper" = "https://arxiv.org/abs/2606.02418"
"Reference repo" = "https://github.com/qiskit-community/qcode-discovery"

[project.scripts]
qcode-discovery = "qcode_discovery.cli:main"
qcode-discover = "qcode_discovery.cli:discover_cmd"
qcode-validate = "qcode_discovery.cli:validate_cmd"
qcode-audit = "qcode_discovery.cli:audit_cmd"

# The package lives directly in src/ (one source folder, mirroring julia/src/) and is imported
# as `qcode_discovery` via this package_dir mapping.
[tool.setuptools]
package-dir = { qcode_discovery = "src" }
packages = [
    "qcode_discovery",
    "qcode_discovery.algebra",
    "qcode_discovery.codes",
    "qcode_discovery.distance",
    "qcode_discovery.structure",
    "qcode_discovery.discovery",
]

[tool.setuptools.package-data]
qcode_discovery = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"   # conftest.py registers qcode_discovery -> src/ for in-tree test runs
